# prometheus

./: .gitignore  README.md  pyproject.toml  topics.json
.github/workflows/: prometheus-harvest.yml
docs/: AUDIT.md
scripts/: harvest.sh  install-cron.sh  reindex.py  report.sh  sync-local.sh
src/prometheus/: __init__.py  analysis.py  analytics.py  cli.py  config.py  corpus.py  datasets.py  discover.py  documents.py  embeddings.py  entities.py  harvest.py  ingest.py  jats.py  landing.py  links.py  llm.py  local_llm.py  mailer.py  net.py  obs.py  pipeline.py  process.py  quality.py  rag.py  reports.py  server.py  storage.py  suggest.py  validate.py
src/prometheus/sources/: __init__.py  arxiv.py  bindingdb.py  chembl.py  clinicaltrials.py  ensembl.py  epo_ops.py  europepmc.py  google_patents.py  openalex.py  patents.py  pdb.py  pubchem.py  surechembl.py  uniprot.py
tests/: conftest.py  seed.py  test_analysis.py  test_arxiv_fulltext.py  test_backends.py  test_chunking.py  test_datasets.py  test_discover.py  test_embeddings.py  test_entities.py  test_genomics.py  test_harvest.py  test_landing.py  test_links.py  test_llm.py  test_local_llm.py  test_mailer.py  test_net.py  test_openalex_patents.py  test_parsers.py  test_pipeline.py  test_quality.py  test_rag.py  test_reports.py  test_retrieval_quality.py  test_server.py  test_suggest.py  test_validate.py
