[project]
name = "prometheus"
version = "0.1.0"
description = "A minimal end-to-end data pipeline: ingest, store, process, analyze."
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]
st = ["sentence-transformers>=2.2"]  # optional 'st' embedding backend
pdf = ["pdfminer.six>=20221105"]     # optional arXiv PDF full-text extraction

[project.scripts]
prometheus = "prometheus.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Real-bug rules: pyflakes (F), syntax (E9), bugbear (B), pyupgrade (UP).
select = ["E9", "F", "B", "UP"]
